--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -17,7 +17,7 @@
   </head>
   <body class="min-h-screen bg-stone-50 dark:bg-stone-950 text-stone-900 dark:text-stone-100 flex items-center justify-center">
     <div class="text-center space-y-6">
-      <img src="/logo.svg" alt="Logo" class="h-16 mx-auto" />
+      <img src="/logo.svg" alt="Logo" class="h-10 w-10 mx-auto" />
       <h1 class="text-5xl font-extrabold">404</h1>
       <p class="text-lg text-stone-600 dark:text-stone-400">页面好像迷路了</p>
       <p class="text-sm text-stone-500 dark:text-stone-500">别担心，技术的探索总是伴随着未知。</p>
